--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <script>
         window.$docsify = {
-            name: 'Transplant',
+            name: 'Sac de sable',
             repo: 'https://github.com/samesthumain/samesthumain.github.io',
     
             auto2top: true,
